2nd training/Community/Community/Community1/force-app/main/default/objects/Stored_Item__c/Stored_Item__c.object-meta.xml
<CustomObject>
    <description>Object tied to the Storage under the Application BALWarehouse</description>
    <label>Stored Item</label>
    <nameField>
        <label>Stored Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stored Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>