2nd training/Community/Community/Community1/force-app/main/default/objects/Stored_Item__c/fields/Artist__c.field-meta.xml
<CustomField>
    <fullName>Artist__c</fullName>
    <label>Artist</label>
    <length>30</length>
    <type>Text</type>
</CustomField>