2nd training/Community/Community/Community1/force-app/main/default/objects/Stored_Item__c/fields/Barcode_ID__c.field-meta.xml
<CustomField>
    <fullName>Barcode_ID__c</fullName>
    <description>Barcode reference code</description>
    <externalId>true</externalId>
    <label>Barcode ID</label>
    <length>9</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>