2nd training/Community/Community/Community1/force-app/main/default/objects/Stored_Item__c/fields/Condition_Report__c.field-meta.xml
<CustomField>
    <fullName>Condition_Report__c</fullName>
    <label>Condition Report</label>
    <length>30</length>
    <type>Text</type>
</CustomField>