2nd training/Community/Community/Community1/force-app/main/default/objects/Stored_Item__c/fields/Date_Arrived__c.field-meta.xml
<CustomField>
    <fullName>Date_Arrived__c</fullName>
    <label>Date Arrived</label>
    <type>Date</type>
</CustomField>