2nd training/Community/Community/Community1/force-app/main/default/objects/Stored_Item__c/fields/Date_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Work__c</fullName>
    <description>Year which work was done</description>
    <label>Date of Work</label>
    <length>4</length>
    <type>Text</type>
</CustomField>