2nd training/Community/Community/Community1/force-app/main/default/objects/Stored_Item__c/fields/Days_Stored__c.field-meta.xml
<CustomField>
    <fullName>Days_Stored__c</fullName>
    <description>IF( {!Is_Removed__c}  , ROUND(  {!Date_Removed__c}  -   {!Date_Arrived__c} , 0) , ROUND((NOW() -   {!Date_Arrived__c} ),0))</description>
    <formula>IF(  Is_Removed__c , Date_Removed__c -  Date_Arrived__c  , TODAY() -  Date_Arrived__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Stored</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>