2nd training/Community/Community/Community1/force-app/main/default/objects/Stored_Item__c/fields/Dimension_Carton__c.field-meta.xml
<CustomField>
    <fullName>Dimension_Carton__c</fullName>
    <description>External dimension of carton</description>
    <label>Dimension of Carton</label>
    <length>20</length>
    <type>Text</type>
</CustomField>