2nd training/Community/Community/Community1/force-app/main/default/objects/Stored_Item__c/fields/Dimension_Frame__c.field-meta.xml
<CustomField>
    <fullName>Dimension_Frame__c</fullName>
    <description>Dimension of Frame</description>
    <label>Dimension of frame</label>
    <length>20</length>
    <type>Text</type>
</CustomField>