2nd training/Community/Community/Community1/force-app/main/default/objects/Stored_Item__c/fields/Dimension_Work__c.field-meta.xml
<CustomField>
    <fullName>Dimension_Work__c</fullName>
    <description>Dimensions of work in cm</description>
    <label>Dimension of Work</label>
    <length>20</length>
    <type>Text</type>
</CustomField>