2nd training/Community/Community/Community1/force-app/main/default/objects/Stored_Item__c/fields/Inbound_Storage_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Storage_Shipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inbound Storage Shipment</label>
    <referenceTo>Storage_Shipment__c</referenceTo>
    <relationshipLabel>Stored Items</relationshipLabel>
    <relationshipName>Stored_Item</relationshipName>
    <type>Lookup</type>
</CustomField>