2nd training/Community/Community/Community1/force-app/main/default/objects/Stored_Item__c/fields/Insurance_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Expiry_Date__c</fullName>
    <label>Insurance Expiry Date</label>
    <type>Date</type>
</CustomField>