2nd training/Community/Community/Community1/force-app/main/default/objects/Stored_Item__c/fields/Is_Removed__c.field-meta.xml
<CustomField>
    <fullName>Is_Removed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Removed</label>
    <type>Checkbox</type>
</CustomField>