2nd training/Community/Community/Community1/force-app/main/default/objects/Stored_Item__c/fields/Item_Removed__c.field-meta.xml
<CustomField>
    <fullName>Item_Removed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Item Removed</label>
    <type>Checkbox</type>
</CustomField>