2nd training/Community/Community/Community1/force-app/main/default/objects/Stored_Item__c/fields/Location_Col__c.field-meta.xml
<CustomField>
    <fullName>Location_Col__c</fullName>
    <label>Location Col</label>
    <length>12</length>
    <type>Text</type>
</CustomField>