2nd training/Community/Community/Community1/force-app/main/default/objects/Stored_Item__c/fields/Medium__c.field-meta.xml
<CustomField>
    <fullName>Medium__c</fullName>
    <label>Medium</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acrylic and Pencil on Canvas</fullName>
            </value>
            <value>
                <fullName>Acrylic on Board</fullName>
            </value>
            <value>
                <fullName>Acrylic on Canvas</fullName>
            </value>
            <value>
                <fullName>Acrylic on Linen</fullName>
            </value>
            <value>
                <fullName>Batik</fullName>
            </value>
            <value>
                <fullName>Ink and Color on Paper</fullName>
            </value>
            <value>
                <fullName>Lithograph</fullName>
            </value>
            <value>
                <fullName>Mixed Media on Print</fullName>
            </value>
            <value>
                <fullName>Mixed Medium on Paper</fullName>
            </value>
            <value>
                <fullName>Oil &amp; Acrylic on Canvas</fullName>
            </value>
            <value>
                <fullName>Oil on Board</fullName>
            </value>
            <value>
                <fullName>Oil on Canvas</fullName>
            </value>
            <value>
                <fullName>Pencil on Paper</fullName>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>