2nd training/Community/Community/Community1/force-app/main/default/objects/Stored_Item__c/fields/Notes_Artwork__c.field-meta.xml
<CustomField>
    <fullName>Notes_Artwork__c</fullName>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>