2nd training/Community/Community/Community1/force-app/main/default/objects/Stored_Item__c/fields/Outbound_Storage_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Storage_Shipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outbound Storage Shipment</label>
    <referenceTo>Storage_Shipment__c</referenceTo>
    <relationshipLabel>Stored Items (Outbound Storage Shipment)</relationshipLabel>
    <relationshipName>Stored_Item1</relationshipName>
    <type>Lookup</type>
</CustomField>