2nd training/Community/Community/Community1/force-app/main/default/objects/Stored_Item__c/fields/picture__c.field-meta.xml
<CustomField>
    <fullName>picture__c</fullName>
    <formula>IMAGE(&quot;http://10.10.10.21/cpg/albums/userpics/10002/&quot; &amp;   Barcode_ID__c &amp; &quot;.jpg&quot;, &quot;photo&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Picture</label>
    <type>Text</type>
</CustomField>