2nd training/Community/Community/Community1/force-app/main/default/objects/Stored_Item__c/fields/Storage__c.field-meta.xml
<CustomField>
    <fullName>Storage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Storage</label>
    <referenceTo>Storage__c</referenceTo>
    <relationshipLabel>Stored Items</relationshipLabel>
    <relationshipName>R00N2000000124JiEAI</relationshipName>
    <type>Lookup</type>
</CustomField>