2nd training/Community/Community/Community1/force-app/main/default/objects/Stored_Item__c/fields/Volume__c.field-meta.xml
<CustomField>
    <fullName>Volume__c</fullName>
    <description>Volume per individual item/package</description>
    <label>Volume (m3)</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>